--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Masataka Yakura",
   "license": "ISC",
   "dependencies": {
-    "@11ty/eleventy": "^3.0.0"
+    "@11ty/eleventy": "^3.0.0",
+    "@11ty/eleventy-upgrade-help": "^3.0.1"
   }
 }
